--- a/analytics.html
+++ b/analytics.html
@@ -98,7 +98,7 @@
   <body>
     <div class="sidebar" id="sidebar">
       <h3 class="title">מחלקת הנדסה</h3>
-      <a href="ניהול פניות.html">בית</a>
+      <a href="index.html">בית</a>
       <hr />
       <a href="tasks.html">משימות</a>
       <hr />
