--- a/analytics.html
+++ b/analytics.html
@@ -70,6 +70,7 @@
         color: black;
         padding: 15px;
         font-size: 30px;
+        margin-top: 50px;
       }
       .toggle-btn {
         position: fixed;
