--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       <hr />
       <a href="#alerts" onclick="showAlerts()">היסטוריית התראות</a>
       <hr />
-      <a href="analytics.html">אנליטיקה</a>
+      <a href="analytics.html">ניתוח נתונים</a>
     </div>
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
     <div class="container mt-1 pt-5">
@@ -433,6 +433,7 @@
           </button>
         </div>
       </div>
+      <hr />
       <div class="columns">
         <div class="column">
           <h3 id="tasks">משימות</h3>
