--- a/analytics.html
+++ b/analytics.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Analytics</title>
+    <title>ניתוח נתונים - מחלקת הנדסה</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -105,9 +105,9 @@
       <hr />
       <a href="requests.html">פניות</a>
       <hr />
-      <a href="history.html" onclick="showHistory()">היסטוריה</a>
+      <a href="#history" onclick="showHistory()">היסטוריה</a>
       <hr />
-      <a href="alerts.html" onclick="showAlerts()">היסטוריית התראות</a>
+      <a href="#alerts" onclick="showAlerts()">היסטוריית התראות</a>
       <hr />
       <a href="analytics.html">ניתוח נתונים</a>
     </div>
