--- a/analytics.html
+++ b/analytics.html
@@ -94,6 +94,101 @@
         text-align: center;
         margin-top: 10px;
       }
+
+      /* סגנונות למצב Dark Mode */
+      .dark-mode {
+        background-color: #121212;
+        color: #ffffff;
+      }
+      .dark-mode .container {
+        background-color: #1e1e1e;
+      }
+      .dark-mode .task-item {
+        background-color: #2c2c2c;
+        box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
+      }
+      .dark-mode .priority-high {
+        border-left: 5px solid #ff6b6b;
+        background-color: #3b3b3b;
+      }
+      .dark-mode .priority-medium {
+        border-left: 5px solid #ffd93b;
+        background-color: #3b3b3b;
+      }
+      .dark-mode .priority-low {
+        border-left: 5px solid #4caf50;
+        background-color: #3b3b3b;
+      }
+      .dark-mode .sidebar {
+        background-color: #2c2c2c;
+        border-left: 0.5px solid #3b3b3b;
+      }
+      .dark-mode .sidebar a {
+        color: #ffffff;
+      }
+      .dark-mode .sidebar a:hover {
+        color: #ffd93b;
+      }
+      .dark-mode .toggle-btn {
+        background-color: #2c2c2c;
+        color: #ffffff;
+        border: 2px solid #ffffff;
+      }
+      .dark-mode .banner {
+        background: linear-gradient(90deg, #007bff, #00c6ff);
+        box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+      }
+      .dark-mode .column {
+        background-color: #2c2c2c;
+        border: 1px solid #3b3b3b;
+        color: #ffffff;
+      }
+      .dark-mode .footer {
+        background-color: #2c2c2c;
+        color: #ffffff;
+      }
+
+      .dark-mode .sidebar .title {
+        color: #ffffff;
+      }
+
+      .dark-mode .sidebar button {
+        border-radius: 50%;
+        font-size: 20px;
+        border: 1px solid #ffffff;
+        background-color: #2c2c2c;
+        color: #ffffff;
+      }
+
+      .sidebar-footer {
+        position: fixed;
+        right: 15px;
+        bottom: 15px;
+        width: 100%;
+        color: white;
+      }
+
+      .sidebar button {
+        border-radius: 50%;
+        font-size: 20px;
+        border: 1px solid #ffffff;
+        background-color: #2c2c2c;
+        color: #ffffff;
+      }
+
+      .dark-mode .chart-container {
+        background-color: #2c2c2c;
+        border: 1px solid #3b3b3b;
+        color: #ffffff;
+      }
+
+      .dark-mode canvas {
+        background-color: #2c2c2c;
+      }
+
+      .dark-mode .chart-text {
+        color: #ffffff;
+      }
     </style>
   </head>
   <body>
@@ -101,15 +196,20 @@
       <h3 class="title">מחלקת הנדסה</h3>
       <a href="index.html">בית</a>
       <hr />
-      <a href="tasks.html">משימות</a>
+      <a href="index.html">משימות</a>
       <hr />
-      <a href="requests.html">פניות</a>
+      <a href="index.html">פניות</a>
       <hr />
       <a href="#history" onclick="showHistory()">היסטוריה</a>
       <hr />
       <a href="#alerts" onclick="showAlerts()">היסטוריית התראות</a>
       <hr />
       <a href="analytics.html">ניתוח נתונים</a>
+      <footer class="sidebar-footer">
+        <button id="darkModeToggle" onclick="toggleDarkMode()">
+          <i id="darkModeIcon" class="fa-regular fa-moon"></i>
+        </button>
+      </footer>
     </div>
     <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
     <div class="container mt-1 pt-5">
@@ -263,6 +363,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-hot-toast/dist/index.umd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
+
     <script>
       function toggleSidebar() {
         const sidebar = document.getElementById("sidebar");
@@ -494,6 +595,36 @@
         );
         dataModal.show();
       }
+
+      function toggleDarkMode() {
+        const body = document.body;
+        const icon = document.getElementById("darkModeIcon");
+        body.classList.toggle("dark-mode");
+        if (body.classList.contains("dark-mode")) {
+          icon.classList.remove("fa-moon");
+          icon.classList.add("fa-sun");
+          localStorage.setItem("darkMode", "enabled");
+        } else {
+          icon.classList.remove("fa-sun");
+          icon.classList.add("fa-moon");
+          localStorage.setItem("darkMode", "disabled");
+        }
+      }
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const darkMode = localStorage.getItem("darkMode");
+        const body = document.body;
+        const icon = document.getElementById("darkModeIcon");
+        if (darkMode === "enabled") {
+          body.classList.add("dark-mode");
+          icon.classList.remove("fa-moon");
+          icon.classList.add("fa-sun");
+        } else {
+          body.classList.remove("dark-mode");
+          icon.classList.remove("fa-sun");
+          icon.classList.add("fa-moon");
+        }
+      });
     </script>
   </body>
 </html>
