--- a/analytics.html
+++ b/analytics.html
@@ -187,6 +187,24 @@
       .dark-mode .chart-text {
         color: #ffffff;
       }
+
+      .dark-mode .modal-content {
+        background-color: #2c2c2c;
+        color: #ffffff;
+        border: 1px solid #3b3b3b;
+      }
+
+      .dark-mode .modal-header {
+        border-bottom: 1px solid #3b3b3b;
+      }
+
+      .dark-mode .modal-footer {
+        border-top: 1px solid #3b3b3b;
+      }
+
+      .dark-mode .btn-close {
+        filter: invert(1);
+      }
     </style>
   </head>
   <body>
@@ -264,6 +282,7 @@
             <h5 class="modal-title" id="historyModalLabel">
               היסטוריית פניות ומשימות
             </h5>
+            &nbsp;&nbsp;&nbsp;
             <button
               type="button"
               class="btn-close"
@@ -300,6 +319,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="alertsModalLabel">היסטוריית התראות</h5>
+            &nbsp;&nbsp;&nbsp;
             <button
               type="button"
               class="btn-close"
@@ -336,6 +356,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="dataModalLabel">נתוני פניות ומשימות</h5>
+            &nbsp;&nbsp;&nbsp;
             <button
               type="button"
               class="btn-close"
