--- a/analytics.html
+++ b/analytics.html
@@ -205,6 +205,30 @@
       .dark-mode .btn-close {
         filter: invert(1);
       }
+
+      .dark-mode .modal-content {
+        background-color: #2c2c2c;
+        color: #ffffff;
+        border: 1px solid #3b3b3b;
+      }
+
+      .dark-mode .modal-header {
+        border-bottom: 1px solid #3b3b3b;
+      }
+
+      .dark-mode .modal-footer {
+        border-top: 1px solid #3b3b3b;
+      }
+
+      .dark-mode .btn-close {
+        filter: invert(1);
+      }
+
+      .dark-mode .list-group-item {
+        background-color: #2c2c2c;
+        color: #ffffff;
+        border: 1px solid #3b3b3b;
+      }
     </style>
   </head>
   <body>
