--- a/analytics.html
+++ b/analytics.html
@@ -690,8 +690,21 @@
       }
 
       const toggle = document.getElementById("darkModeToggle");
+      const body = document.body;
+
+      // Check local storage for dark mode preference
+      if (localStorage.getItem("darkMode") === "enabled") {
+        body.classList.add("dark-mode");
+        toggle.checked = true;
+      }
+
       toggle.addEventListener("change", () => {
-        document.body.classList.toggle("dark-mode", toggle.checked);
+        body.classList.toggle("dark-mode", toggle.checked);
+        if (toggle.checked) {
+          localStorage.setItem("darkMode", "enabled");
+        } else {
+          localStorage.setItem("darkMode", "disabled");
+        }
       });
     </script>
   </body>
