--- a/analytics.html
+++ b/analytics.html
@@ -20,9 +20,11 @@
         text-align: right;
         background-color: #f8f9fa;
         font-family: "Calibri";
+        transition: 0.1s ease-in-out;
       }
       .container {
         width: 100%;
+        transition: 0.1s ease-in-out;
       }
       .banner {
         background: linear-gradient(90deg, #007bff, #00c6ff);
@@ -124,7 +126,7 @@
         background-size: cover;
       }
       input:checked + .slider {
-        background-color: #2196f3;
+        background-color: #121212;
       }
       input:checked + .slider:before {
         transform: translateX(30px);
@@ -148,55 +150,69 @@
       .dark-mode {
         background-color: #121212;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .container {
         background-color: #1e1e1e;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .task-item {
         background-color: #2c2c2c;
         box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
+        transition: 0.1s ease-in-out;
       }
+
       .dark-mode .priority-high {
         border-left: 5px solid #ff6b6b;
         background-color: #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .priority-medium {
         border-left: 5px solid #ffd93b;
         background-color: #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .priority-low {
         border-left: 5px solid #4caf50;
         background-color: #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .sidebar {
         background-color: #2c2c2c;
         border-left: 0.5px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .sidebar a {
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .toggle-btn {
         background-color: #2c2c2c;
         color: #ffffff;
         border: 2px solid #ffffff;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .banner {
         background: linear-gradient(90deg, #007bff, #00c6ff);
         box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .column {
         background-color: #2c2c2c;
         border: 1px solid #3b3b3b;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .footer {
         background-color: #2c2c2c;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .sidebar .title {
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .sidebar button {
@@ -205,6 +221,7 @@
         border: 2px solid #ffffff;
         background-color: #2c2c2c;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .sidebar-footer {
@@ -221,62 +238,75 @@
         border: 2px solid #ffffff;
         background-color: #2c2c2c;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .chart-container {
         background-color: #2c2c2c;
         border: 1px solid #3b3b3b;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode canvas {
         background-color: #2c2c2c;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .chart-text {
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-content {
         background-color: #2c2c2c;
         color: #ffffff;
         border: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-header {
         border-bottom: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-footer {
         border-top: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .btn-close {
         filter: invert(1);
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-content {
         background-color: #2c2c2c;
         color: #ffffff;
         border: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-header {
         border-bottom: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-footer {
         border-top: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .btn-close {
         filter: invert(1);
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .list-group-item {
         background-color: #2c2c2c;
         color: #ffffff;
         border: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
     </style>
   </head>
