--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
         text-align: right;
         background-color: #f8f9fa;
         font-family: "Calibri";
+        transition: 0.1s ease-in-out;
       }
       .container {
         width: 100%;
+        transition: 0.1s ease-in-out;
       }
       .search-container {
         display: flex;
@@ -289,7 +291,7 @@
         width: 22px;
         left: 4px;
         bottom: 4px;
-        /* background-color: white; */
+
         transition: 0.4s;
         border-radius: 50%;
         display: flex;
@@ -299,7 +301,7 @@
         background-size: cover;
       }
       input:checked + .slider {
-        background-color: #2196f3;
+        background-color: #121212;
       }
       input:checked + .slider:before {
         transform: translateX(30px);
@@ -367,57 +369,70 @@
       }
       /* סגנונות למצב Dark Mode */
       .dark-mode {
+        transition: 0.1s ease-in-out;
         background-color: #121212;
         color: #ffffff;
       }
       .dark-mode .container {
+        transition: 0.1s ease-in-out;
         background-color: #1e1e1e;
       }
       .dark-mode .task-item {
         background-color: #2c2c2c;
         box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .priority-high {
         border-left: 5px solid #ff6b6b;
         background-color: #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .priority-medium {
         border-left: 5px solid #ffd93b;
         background-color: #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .priority-low {
         border-left: 5px solid #4caf50;
         background-color: #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .sidebar {
         background-color: #2c2c2c;
         border-left: 0.5px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .sidebar a {
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .toggle-btn {
         background-color: #2c2c2c;
         color: #ffffff;
         border: 2px solid #ffffff;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .banner {
         background: linear-gradient(90deg, #007bff, #00c6ff);
         box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .column {
         background-color: #2c2c2c;
         border: 1px solid #3b3b3b;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
       .dark-mode .footer {
         background-color: #2c2c2c;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .sidebar .title {
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .sidebar button {
@@ -426,6 +441,7 @@
         border: 2px solid #ffffff;
         background-color: #2c2c2c;
         color: #ffffff;
+        transition: 0.1s ease-in-out;
       }
 
       .sidebar-footer {
@@ -440,18 +456,22 @@
         background-color: #2c2c2c;
         color: #ffffff;
         border: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-header {
         border-bottom: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .modal-footer {
         border-top: 1px solid #3b3b3b;
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .btn-close {
         filter: invert(1);
+        transition: 0.1s ease-in-out;
       }
 
       .dark-mode .list-group-item {
